tests/fail/good_code_error_message.stderr
error[E0308]: mismatched types
 --> tests/fail/good_code_error_message.rs:3:17
  |
3 |     let _: () = 2;
  |            --   ^ expected `()`, found integer
  |            |
  |            expected due to this

error[E0308]: mismatched types
 --> tests/fail/good_code_error_message.rs:2:37
  |
2 |   fn good_code_error_message() -> u32 {
  |  _________________________________---_^
  | |                                 |
  | |                                 expected `u32` because of return type
3 | |     let _: () = 2;
4 | | }
  | |_^ expected `u32`, found `()`
